# SteamOS-Tools

./: .gitignore  .gitmodules  .travis.yml  1  AUTHORS.md  ISSUE_TEMPLATE.md  Pipfile  README.md  README.md.orig  SteamOS-Tools.code-workspace  SteamOS-stats-README  SteamOS-stats-README.md  TODO.txt  add-debian-repos.sh  add-debian-repos.sh.orig  basic-software.txt  brewmaster-chk-list.txt  bug-report-tool.sh  build-deb-from-PPA.sh  build-deb-from-ppa.sh  build-deb-from-src.sh  build-deb-from-src.sh.orig  build-test-chroot.sh  build-test-docker  build-test-docker.sh  changelog.md  configure-repos.sh  contributing.md  desktop-software.sh  desktop-software.sh.orig  disclaimer.md  extra-pkgs.sh  extra-software.txt  full-software.txt  install-desktop-software.sh  issue_template.md  libregeek-archive-keyring-latest.deb  log_temp.txt  pair-ps3-bluetooth.sh  pair-ps3-bluetooth.sh.orig  (+9 more)
utilities/build-scripts/kodi/pvr.mythtv-Isengard/: .gitignore  CMakeLists.txt
utilities/build-scripts/kodi/pvr.mythtv-Isengard/debian/: changelog.in  control  copyright  kodi-pvr-mythtv.install  rules
utilities/build-scripts/kodi/pvr.mythtv-Isengard/lib/cppmyth/: CMakeLists.txt
utilities/build-scripts/kodi/pvr.mythtv-Isengard/lib/cppmyth/src/: cppmyth_config.h.in  mythcontrol.cpp  mythcontrol.h  mythdebug.cpp  mythdebug.h  mytheventhandler.cpp  mytheventhandler.h  mythfileplayback.cpp  mythfileplayback.h  mythintrinsic.cpp  mythintrinsic.h  mythlivetvplayback.cpp  mythlivetvplayback.h  mythlocked.cpp  mythlocked.h  mythrecordingplayback.cpp  mythrecordingplayback.h  mythsharedptr.h  mythstream.h  mythtypes.cpp  mythtypes.h  mythwsapi.cpp  mythwsapi.h  mythwsstream.cpp  mythwsstream.h
utilities/build-scripts/kodi/pvr.mythtv-Isengard/lib/cppmyth/src/private/: builtin.c  builtin.h  mythatomic.h  mythjsonbinder.cpp  mythjsonbinder.h  mythjsonparser.cpp  mythjsonparser.h  mythsocket.cpp  mythsocket.h  mythuriparser.cpp  mythuriparser.h  mythwscontent.cpp  mythwscontent.h  mythwsrequest.cpp  mythwsrequest.h  mythwsresponse.cpp  mythwsresponse.h  sajson.h
utilities/build-scripts/kodi/pvr.mythtv-Isengard/lib/cppmyth/src/private/mythdto/: artwork.h  capturecard.h  (+14 more)
utilities/build-scripts/kodi/pvr.mythtv-Isengard/lib/cppmyth/src/proto/: mythprotobase.cpp  mythprotobase.h  mythprotoevent.cpp  mythprotoevent.h  mythprotomonitor.cpp  mythprotomonitor.h  mythprotoplayback.cpp  mythprotoplayback.h  mythprotorecorder.cpp  mythprotorecorder.h  mythprototransfer.cpp  mythprototransfer.h
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/: addon.xml  changelog.txt
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/: eit_categories.txt  settings.xml
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.af_za/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.am_et/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.ar_sa/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.be_by/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.bg_bg/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.bs_ba/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.ca_es/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.cs_cz/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.cy_gb/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.da_dk/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.de_de/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.el_gr/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.en_au/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.en_gb/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.en_nz/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.en_us/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.eo/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.es_ar/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.es_es/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.es_mx/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.et_ee/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/pvr.mythtv/resources/language/resource.language.eu_es/: strings.po
utilities/build-scripts/kodi/pvr.mythtv-Isengard/src/: avinfo.cpp  avinfo.h  categories.cpp  categories.h  client.cpp  client.h  cppmyth.h  demux.cpp  demux.h  fileOps.cpp  fileOps.h  guidialogbase.cpp  guidialogbase.h  guidialogyesno.cpp  guidialogyesno.h  pvrclient-mythtv.cpp  pvrclient-mythtv.h  tools.h
utilities/build-scripts/kodi/pvr.mythtv-Isengard/src/cppmyth/: MythChannel.cpp  MythChannel.h  MythEPGInfo.cpp  MythEPGInfo.h  MythProgramInfo.cpp  MythProgramInfo.h  MythRecordingRule.cpp  MythRecordingRule.h  MythScheduleManager.cpp  MythScheduleManager.h
utilities/build-scripts/kodi/pvr.mythtv-Isengard/src/demuxer/: ES_AAC.cpp  ES_MPEGVideo.cpp  ES_MPEGVideo.h  ES_h264.cpp  bitstream.cpp  bitstream.h  debug.cpp  debug.h  elementaryStream.cpp  elementaryStream.h  tsDemuxer.cpp  tsDemuxer.h
(+703 files in other folders)
